# cpp_timer

./: CMakeLists.txt  README.md  cpp_timer.pc.in
src/: cpp_timer.cpp  cpp_timer.h
